--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,5 +28,5 @@ jobs:
       - name: Upload Report
         uses: actions/upload-artifact@v4
         with:
-          name: my-artifact
-          path: path/to/artifact/ # or path/to/artifact
+          name: report
+          path: html-report.html # or path/to/artifact
